# agent-manager

./: .gitignore  Package.swift  README.md
Sources/AgentManagerCore/: Agent.swift  AgentRunner.swift  AgentStore.swift  LaunchAgent.swift  LogManager.swift  StatsManager.swift
Sources/AgentManagerCore/Workflow/: DAGExecutor.swift  ExpressionEvaluator.swift  Guardrails.swift  JobRunner.swift  OutputExtractor.swift  Workflow.swift  WorkflowLaunchAgent.swift  WorkflowResult.swift  WorkflowRunner.swift  WorkflowStore.swift
Sources/AgentManagerGUI/App/: AgentManagerApp.swift  AppDelegate.swift
Sources/AgentManagerGUI/Components/: YAMLTextEditor.swift
Sources/agentctl/: AgentCtl.swift
Tests/AgentManagerCoreTests/: AgentTests.swift
agent_manager/: __init__.py
agent_manager/execution/: __init__.py  job_runner.py  workflow_runner.py
agent_manager/expressions/: __init__.py  evaluator.py
agent_manager/models/: __init__.py  agent.py  result.py  workflow.py
agent_manager/providers/: __init__.py  base.py  claude_cli.py
agent_manager/scheduling/: launchd.py
agent_manager/store/: __init__.py  agent_store.py
agentctl/: __init__.py
agentctl/commands/: __init__.py  agent.py  workflow.py
python/: README.md  pyproject.toml
python/agent_manager/execution/: job_runner.py  workflow_runner.py
python/agent_manager/expressions/: extractor.py
python/agent_manager/providers/: base.py
python/agent_manager/scheduling/: __init__.py
python/agent_manager/store/: workflow_store.py
python/tests/: test_models.py
tests/: test_scheduling.py
(+47 files in other folders)
